--- a/MovieReviewStyle.css
+++ b/MovieReviewStyle.css
@@ -92,7 +92,7 @@ border-width: 2px;
 border-radius: 10px;
 padding: 8px;
 }
-#comment_images img{
+.comment_images{
     vertical-align: middle;
     margin-bottom: auto;
 }
