--- a/MovieReviewStyle.css
+++ b/MovieReviewStyle.css
@@ -1,7 +1,8 @@
 
 body{
     background-image: url("images/background.png");
-    font: 8pt Verdana, Tahoma, sans-serif;
+    font-size: 8pt;
+    font-family:  Verdana, Tahoma, sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -18,7 +19,9 @@ body{
     margin-left: 20%;
 }
 h1.movie_name{
-    font :  24pt bold Tahoma, Verdana, sans-serif;
+    font-size :  24pt;
+    font-style: bold;
+    font-family: Verdana, Tahoma, sans-serif;
     text-shadow:  3px 3px #999999;
     margin-left: auto;
     margin-right: auto;
@@ -67,7 +70,8 @@ div#col1 {
 .general_overview{
     background-color:  #A2B964;
     width: 250px;
-    font: 8pt  Arial,sans-serif;
+    font-size: 8pt;
+    font-family:  Arial,sans-serif;
     float: right;
     border-top-right-radius:20px;
     height: 99%;
