--- a/MovieReviewStyle.css
+++ b/MovieReviewStyle.css
@@ -20,7 +20,7 @@ body{
 }
 h1.movie_name{
     font-size :  24pt;
-    font-style: bold;
+    font-weight: bold;
     font-family: Verdana, Tahoma, sans-serif;
     text-shadow:  3px 3px #999999;
     margin-left: auto;
